# test-gc

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  build_icub-main.sh
app/scripts/: test-gc.xml  test-gc_visuomanip.xml
